@@ -1,6 +1,7 @@
 Version 0.3-2
 =============
 - Reduced the package size.
+- Updated confidence interval dialog.
 
 Version 0.3-1
 =============
